[+] Made some major UI changes to the info page. Still working on the blog page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,3 +104,18 @@ body {
     font-size: 0.875rem; /* Reduces font size slightly for better fit */
   }
 }
+
+  /* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #27272a;
+  border: 2px solid #27272a;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #0f0f10;
+}
